# rust-yew-pra

./: Cargo.toml  README.md  index.html  script.js
src/: main.rs  style.css
src/component/: video.rs
